# lisport

./: .gitignore  Cargo.toml  README.md  build.rs  generate_services.py  raw_services.list
.github/workflows/: build.yml
src/: core.rs  main.rs  output.rs  services.list  services.rs  ui.rs
src/core/: local.rs  mod.rs  remote.rs
