[package]
name = "lisport"
version = "0.1.0"
edition = "2024"

[features]
default = ["remote"]
remote = []

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
lazy_static = "1.5.0"
procfs = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tui = "0.19.0"
users = "0.11.0"
